--- a/scripts_Python3/camera_id_Python3.ipynb
+++ b/scripts_Python3/camera_id_Python3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,9 +37,6 @@
     "\n",
     "max_pce = 60.0\n",
     "max_ncc = 0.02\n",
-    "\n",
-    "def draw(arraytje):\n",
-    "    pyplot.hist(arraytje, bins =100)\n",
     "    \n",
     "#all transformations of similarity are monotonic (very important!)\n",
     "\n",
@@ -51,26 +48,27 @@
     "    else:\n",
     "        x = 100000 # the diagonal should have the largest values, not 0\n",
     "        x = math.log(x)\n",
-    "    minx = -22.3000\n",
+    "    minx = -22.3000 #min for the given dataset, after the log transformation\n",
     "    maxx = 11.4900\n",
-    "    x = (x-minx)/(maxx-minx)\n",
+    "    x = (x-minx)/(maxx-minx) #normalize to (0,1) \n",
     "    if x<0.4:\n",
-    "        x=0.4\n",
+    "        x=0.4 #cut off\n",
     "    if x >0.9:\n",
-    "        x=0.9\n",
+    "        x=0.9 # also cut off\n",
     "    \n",
-    "    if x < 0.76:\n",
-    "        a = 1/0.36\n",
+    "    if x < 0.76: # the lowest point between both modes of the bi-modal distribution\n",
+    "        a = 1/0.36 # coefficients for the linear transformation\n",
     "        b = -a*0.4\n",
     "    else:\n",
-    "        a = 0.414/0.14\n",
+    "        a = 0.414/0.14 \n",
     "        b = 1-a*0.76\n",
-    "    x = a*x + b        \n",
-    "    x = math.pow(x,2)\n",
+    "    # after the following transformation, the lowest point is 1, the left-most point is 0 and the right-most point is 2    \n",
+    "    x = a*x + b            \n",
+    "    x = math.pow(x,2) # the non-linear stretching\n",
     "    maxx = 2 # for x^2\n",
-    "    x = x/maxx\n",
+    "    x = x/maxx # normalize to (0,1)\n",
     "    x= 1-x # convert from similarity to distance\n",
-    "    x=x*100#used to be 80. but in the ground  truth the values are 0-100\n",
+    "    x=x*100 #  in the ground  truth the values are 0-100\n",
     "    return x   \n",
     "\n",
     "# this transformation streches non-linearly the distances but emphasizes the large distances\n",
@@ -80,17 +78,18 @@
     "    else:\n",
     "        x = 100000 # the diagonal should have the largest values, not 0\n",
     "        x = math.log(x)\n",
-    "    minx = -22.3000\n",
+    "    minx = -22.3000 #min for the given dataset, after the log transformation\n",
     "    maxx = 11.4900\n",
-    "    x = (x-minx)/(maxx-minx)\n",
+    "    x = (x-minx)/(maxx-minx) #normalize to (0,1) \n",
     "    if x<0.4:\n",
-    "        x=0.4\n",
+    "        x=0.4 #cut off\n",
     "    if x >0.9:\n",
-    "        x=0.9\n",
-    "    x = x/0.36 - 0.4/0.36    \n",
-    "    x = math.pow(x,3)\n",
+    "        x=0.9# also cut off\n",
+    "    x = x/0.36 - 0.4/0.36   # 0.76 is the lowest point og the bi-modal distribution between both modes.With this\n",
+    "    #  transformation, 1 becomes the lowest point, and 0 becomes the left-most point\n",
+    "    x = math.pow(x,3) # non-linear stretching\n",
     "    maxx = 2.6791838135\n",
-    "    x = x/maxx\n",
+    "    x = x/maxx # normalize to (0,1)\n",
     "    x= 1-x # convert from similarity to distance\n",
     "    x=x*100# in  ground  truth the values are 0 to 100\n",
     "    return x  \n",
@@ -287,7 +286,7 @@
     "    matrix_ncc = convert_similarity_to_distance2(matrix_ncc)\n",
     "   \n",
     "    matrix_pce = convert_similarity_to_distance(matrix_pce)# for now only for PCE the new conversion is used\n",
-    "    draw (matrix_pce)\n",
+    "    # pyplot.hist(matrix_pce, bins =100) # here we draw the histogram of the new distances. Disabled by default because it takes time\n",
     "    print(\"max=\")\n",
     "    print(matrix_pce.max())\n",
     "    print(\"min=\")\n",
