Added affinity to the notebook.

--- a/clustit/Clustering_Pentax.ipynb
+++ b/clustit/Clustering_Pentax.ipynb
@@ -499,7 +499,7 @@
    ],
    "source": [
     "from clustit import metrics\n",
-    "algorithms = ['complete', 'average', 'centroid', 'dbscan', 'hdbscan', 'spectral',]\n",
+    "algorithms = ['complete', 'average', 'centroid', 'dbscan', 'hdbscan', 'spectral', 'affinity',]\n",
     "labels = [labels_complete, labels_average, labels_centroid, labels_dbscan, labels_hdbscan, labels_spectral]\n",
     "metric = ['rand_score', 'mutual_info', 'homogeneity', 'completeness']\n",
     "results = {i:[] for i in metric}\n",
